# ROS-notes

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
ROS-notes/: .gitignore  0.ROS1-Cheat-Sheet.md  1.ROS-essentials-Nov21-Lessons-1-77.md  10.ROS2-Getting-ready-Aug22-L01-XX.md  2.ROS-essentials-Motion-Nov21-L82-112.md  3.ROS-essentials-Perception-Dec21-L114.138.md  4.ROS-essentials-rosserial-Dec21.md  5.ROS-navigation-Intro-Jan21-L001-035.md  5.ROS-navigation-Intro-Jan22-L001-035.md  6.ROS-navigation-TF-Jan21-L036-0XX.md  6.ROS-navigation-TF-Jan22-L036-051.md  7.ROS-navigation-maps-Apr22-L052-062.md  7.ROS-navigation-maps-Apr22-L052-0XX.md  8.ROS-navigation-tuning-Jul22-L063-070.md  8.ROS-navigation-tuning-Jul22-L063-0XX.md  9.ROS-navigation-reactive-Aug22-L071-076.md  ROS_Assignment_1.md  ROS_Assignment_2.md  ROS_Assignment_4.md  ROS_Assignment_5.md  ROS_Assignment_6.md  ROS_Assignment_7.md  ROS_ETH_Zurich_L1.md  ROS_ETH_Zurich_L2.md  ROS_ETH_Zurich_L3.md
src/: .gitignore  my_husky.launch  ros_best_practices  teleop_twist_keyboard
udemy-ROS-essentials-course-notes/: .gitignore  1.ROS-essentials-Nov21-Lessons-1-130.md  1.ROS-essentials-Nov21-Lessons-1-77.md  2.ROS-essentials-LaserScanners-Dec21.md  2.ROS-essentials-Motion-Nov21-L82-112.md  2021.12.27-TODO.md  3.ROS-essentials-Perception-Dec21-L114.138.md  3.ROS-essentials-rosserial-Dec21.md  4.ROS-essentials-rosserial-Dec21.md  5.ROS-navigation-Jan21-Lessons 1-.md  5.ROS-navigation-Jan21-Lessons-1-.md  6.ROS-navigation-TF-Jan21-L036-0XX.md  README.md  ROS_Assignment_1.md  ROS_Assignment_4.md  (+4 more)
(+81 files in other folders)
