[tool.poetry]
name = "ROS-notes"
version = "0.1.0"
description = "My notes and exercises to learn ROS"
authors = ["Manuel Heredia <manolo.heredia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
